frontend/src/sass/site/fooforms.scss
$fa-font-path: "/fonts";

@import '../../bower/bootstrap-sass-official/assets/stylesheets/bootstrap';
@import '../../bower/bootstrap-sass-official/assets/stylesheets/bootstrap/theme';

/* GLOBAL STYLES
-------------------------------------------------- */
/* Padding below the footer and lighter body text */

body {
  padding: 0px 0px 40px;
  color: #212930;
  background: #fff;

}

.T09 {
  opacity: .95;
}

.p0 {
  padding: 0px !important;
}

.pt10 {
  padding-top: 10px;
}

.m0 {

  margin: 0px;

}

.text-shadow-light {
  text-shadow: 1px 1px 2px rgba(255, 255, 255, .3) !Important;
}

.text-shadow-dark {
  text-shadow: 1px 1px rgba(0, 0, 0, .3) !important;
}

.align-center {
  text-align: center;
}
.text-center{
  text-align: center;
}
img.logo {
  padding: 6px 0px 0px 40px;
  background: #fff;
  margin: 0px 10px 0px 25px;
  border-radius: 0px 0px 10px 10px;
  border: 5px solid rgba(38, 113, 204, 0.7);
  border-top: 0px;
}

.page-content {
  max-width: 1000px;
  margin: 0 auto 0;
  margin-top: 20px;
}

iframe {
  width: 100%;
  border: 0px !important;
  height: auto;
  min-height: 250px;
}

.iframe-large {
  width: 100%;
  border: 0px;
  height: 650px;

}

iframe div.alert {
  border-radius: 0px;
}

/* CUSTOMIZE THE NAVBAR
-------------------------------------------------- */

.text-foo {
  color: #3B8686;
}
.text-white {
  color: #fff;
}
.navbar-default{
  border: 0px;
}

.navbar-foo > .container-fluid .navbar-brand {
  padding: 0px;
  font-size: 44px;
  color: #68B3AF;
  font-family: 'Play', sans-serif;
background: transparent !important;
}

.navbar-foo {
  box-shadow: none;
  padding-left: 140px;
  padding-right: 140px;
  background: transparent !important;
}

.foo-menu {
  margin-left: 10px;
}

.foo-menu, .foo-menu li {
  height: 70px;
  line-height: 70px;
  padding: 0px;
  font-family: 'Play', sans-serif;

}

.foo-menu li {
  height: 70px;
  line-height: 70px;
  padding-left: 20px;
  padding-right: 20px;

}
 .foo-menu li a{
   padding: 0px !important;
   padding-left: 20px!important;
   padding-right: 20px!important;
   margin-top: 15px;
    border: 2px solid rgba(255,255,255,.4);
border-radius: 6px;
   color: #e7e7e7 !important;
   height: 30px !important;
   line-height: 30px !important;
   background: rgba(255,255,255,.2);
  }
/* CUSTOMIZE THE CAROUSEL
-------------------------------------------------- */

/* Carousel base class */
.jumbotron {
  position: absolute;
  bottom: 0;
  top: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 100%;
  margin: 0px;
  padding: 0px;
  font-family: 'Open Sans Condensed', sans-serif;
  text-align: center;
}
.jumbotron div.img-container{
  width: 100%;
  height: 100%;
  overflow: hidden;
  text-align: center;
  vertical-align: middle;
position: absolute;
  top:0;bottom:0;left:0; right: 0;
}
.jumbotron div.img-container img{
  margin: 0;
  padding: 0;
  min-height: 100%;
  min-width: 100%;
  vertical-align: middle;
}
.jumbotron-filter {
  background-color: rgba(38, 113, 204, .7);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
.jumbotron h1 {
  margin: 0px;
  margin-top: 8%;
  font-size: 48px;
  color: #fff;
  font-weight: 300;
  font-family: 'Open Sans Condensed', sans-serif;
  text-shadow: 1px 1px 4px rgba(0, 0, 0, .3);
}

.jumbotron h2 {
  margin: 0px;
  padding-top: 2%;
  font-size: 20px;
  color: #fff;
  font-weight: 900;
  font-family: 'Open Sans Condensed', sans-serif;
  text-shadow: 1px 1px 4px rgba(0, 0, 0, .3);

}
.jumbotron h3 {
  margin: 0px;
  padding-top: 3%;
  font-size: 24px;
  color: #263042;

  font-weight: 900;
  font-family: 'Open Sans Condensed', sans-serif;
  text-shadow: 1px 1px 3px rgba(255,255,255,.3);

}

.jumbotron h2, .jumbotron h3, .jumbotron h4, .jumbotron h5 {
  font-family: 'Open Sans Condensed', sans-serif;
  font-weight: 500;
  max-width: 1000px;
  margin: 0 auto 0;
  text-align: center;
}

.jumbotron h2 span.highlighted {
  color: #0279d2;
  font-weight: 500;
}

.jumbotron i.fa {
  color: #3a4556;
  font-weight: 300;
}

/* Declare heights because of positioning of img element */
.jumbotron-home {

}



.bg-transparent-1 {
  background: rgba(255, 255, 255, 0.1);
}

.bg-transparent-2 {
  background: rgba(255, 255, 255, 0.2);
}

.bg-transparent-3 {
  background: rgba(255, 255, 255, 0.3);
}

.bg-transparent-4 {
  background: rgba(255, 255, 255, 0.4);
}

.bg-transparent-5 {
  background: rgba(255, 255, 255, 0.5);
}

.rounded-top {
  background: rgba(255, 255, 255, 0.4);
  padding: 8px;
  border-radius: 5px 5px 0px 0px;
  display: inline-block;
  margin: 0 auto 0;
  border: 1px solid rgba(255, 255, 255, .5);
  border-bottom: 0px;
}

.rounded-full {
  background: rgba(255, 255, 255, 0.4);
  padding: 8px;
  border-radius: 5px;
  display: inline-block;
  margin: 0 auto 0;
  border: 1px solid rgba(255, 255, 255, .5);
  border-bottom: 0px;
}

.bordered-light {
  border: 1px solid rgba(255, 255, 255, .5);
}

.btn-huge {
  border-radius: 6px;
  font-size: 1em;
}

.jumbotron-home .item {

  padding: 10px;
}

.jumbotron-home .item ul {
  margin: 5px;
}

.fa-huge {
  font-size: 12em !important;
  color: #f6f6f6;
  text-align: center;
  text-shadow: 0px 1px 2px rgba(255, 255, 255, 0.50);
}

.fa-big {
  margin: 10px;
  font-size: 50px;
  line-height: 50px;
  color: #68B3AF;
}

.highlight {
  color: #f6f6f6;
  background: #3a4556 url('/assets/images/tile-bg.png');
  padding: 20px 0px;
  border-top: 20px solid #3a4556;
  border-bottom: 20px solid #3a4556;

}

.highlight {
  text-align: center;
  margin: 0 auto 0;
}

.highlight p {
  font-family: 'Open Sans Condensed', sans-serif;
  font-size: 1.4em;
  text-align: justify;
}

.highlight h2 {
  font-family: 'Open Sans Condensed', sans-serif;
  color: #449632;
  text-align: center;
  text-shadow: 0px 1px 0px rgba(255, 255, 255, .3);
}

.highlight div.col-sm-4 {

  margin-bottom: 5px;
}

/* MARKETING CONTENT
-------------------------------------------------- */
.container {
  width: 100%;

}

/* Pad the edges of the mobile views a bit */
.marketing {
  position: relative;
  clear: both;
  margin-top: 50%;
  padding-left: 0px;
  padding-right: 0px;
}

/* Center align the text within the three columns below the carousel */
.marketing .col-lg-4 {
  text-align: center;
  margin-bottom: 20px;
}

.marketing h2 {
  font-weight: 300;
}

.marketing .col-lg-4 p {
  margin-left: 10px;
  margin-right: 10px;
}

.marketing .col-sm-4 img {
  width: 95%;
  margin-left: 2.5%;
}

/* Featurettes
------------------------- */
.featurette {
  margin: 0 auto 0;
  padding: 20px 0px;

  background: #fff url('/assets/images/tile-bg3.png');;
}

.featurette-divider {
  margin: 40px 0; /* Space out the Bootstrap <hr> more */
}

/* Thin out the marketing headings */
.featurette-heading {
  font-weight: 300 !important;
  line-height: 1;
  letter-spacing: -1px;
}

.text-highlight {
  color: #0b9eff;
}

.lightOnDark {
  font-family: 'Open Sans Condensed', sans-serif;

  color: #fff;
  background: #009de6 url('/assets/images/tile-bg2.png');
  padding: 20px 0px;
  border-top: 20px solid #3a4556;
  border-bottom: 20px solid #3a4556;

  font-weight: 300 !important;
}

.lightOnDark2 {
  color: #efefef;
  background: #5D4157;
  padding: 20px 0px;
  border-top: 20px solid #3a4556;
  border-bottom: 20px solid #3a4556;

  font-weight: 300 !important;
}

/* RESPONSIVE CSS
-------------------------------------------------- */

@media (min-width: 768px) {

  .jumbotron {


  }
  .jumbotron-home {


  }
  .jumbotron h1 {
    font-size: 60px;
  }

  .jumbotron h2 {
    font-size: 26px;
  }

  /* Remove the edge padding needed for mobile */
  .marketing {
    padding: 0px;
    background: #ffffff;
  }

  .featurette-heading {
    font-size: 50px;
    font-weight: 300;
  }

  .highlight div.col-sm-4 {
    border-bottom: 0px;
    margin-bottom: 0px;
  }

}

@media (min-width: 992px) {

  .jumbotron-home{

  }
  .jumbotron {
    padding-top: 50px;
    padding-bottom: 250px;
  }
  .jumbotron h1 {
    font-size: 80px;
    font-weight: 900;
padding-bottom: 2.5%;
  }

  .jumbotron h2 {
    font-size: 40px;
    font-weight: 900;
padding-bottom: 2.5%;

  }

  .jumbotron h3 {
    font-size: 40px;
    font-weight: 500;
  }

  .featurette-heading {
    margin-top: 120px;
  }

  .content-secondary .ui-collapsible {
    padding: 0 15px 10px;

  }

  .content-secondary .ui-collapsible-content {
    padding: 0;
    background: none;
    border-bottom: none;
  }

  .content-secondary .ui-listview {
    margin: 0;
  }

  .content-secondary {
    text-align: left;
    float: left;
    width: 25%;
    background: none;
  }

  .content-secondary,
  .type-interior .content-secondary {
    margin: 30px 0 20px 2%;
    padding: 20px 4% 0 0;
    background: none;
    border-top: none;
  }

  .type-index .content-secondary {
    padding: 0;
  }

  .content-secondary .ui-collapsible {
    margin: 0;
    padding: 0;
  }

  .content-secondary .ui-collapsible-content {
    border: none;
  }

  .type-index .content-secondary .ui-listview {
    margin: 0;
  }

  .ui-mobile #jqm-homeheader {
    padding: 0;
  }

  .content-primary {
    width: 65%;
    float: right;
    margin-top: 30px;
    margin-right: 1%;
    padding-right: 1%;
  }

  .content-primary ul:first-child {
    margin-top: 0;
  }

  .content-secondary h2 {
    position: absolute;
    left: -9999px;
  }

  .type-interior .content-primary {
    padding: 1.5em 6% 3em 0;
    margin: 0;
  }

  /* fix up the collapsibles - expanded on desktop */
  .content-secondary .ui-collapsible-heading {
    display: none;
  }

  .content-secondary .ui-collapsible-contain {
    margin: 0;
  }

  .content-secondary .ui-collapsible-content {
    display: block;
    margin: 0;
    padding: 0;
  }

  .type-interior .content-secondary .ui-li-divider {
    padding-top: 1em;
    padding-bottom: 1em;
  }

  .type-interior .content-secondary {
    margin: 0;
    padding: 0;
  }

}

@media all and (max-width: 1024px) {
  .navbar-foo {
    padding-left: 60px;
    padding-right: 60px;

  }
}

@media all and (max-width: 800px) {
  .navbar-foo {
    padding-left: 0px;
    padding-right: 0px;

  }
}

